fix spacing on search button

--- a/src/app/current-events/current-events.component.css
+++ b/src/app/current-events/current-events.component.css
@@ -23,3 +23,8 @@ button {
 #savedNews {
   margin-left: 2%;
 }
+
+#newsSearch {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
